# rpw-agent-marketplace

./: .gitignore  .public-publish.yml  AGENTS.md  CLAUDE.md  Makefile  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json
docs/: beads-hierarchy-standard.md  release-log.md
docs/architecture/: plugin-boundaries.md
docs/decisions/: ADR-001-calendar-first-versioning.md  ADR-2026-03-05-build-command-migration.md  README.md
docs/plans/: 2026-03-09-gemini-image-and-exa-search-design.md  2026-03-09-gemini-image-and-exa-search-plan.md  2026-03-10-build-agent-hierarchy.mmd  2026-03-10-build-naming-convention.md  2026-03-10-build-subagent-recommendations.md  (+2 more)
plugins/rpw-working/mcp-servers/exa/: mcp_server.py  pyproject.toml  run_mcp.py  template.env
plugins/rpw-working/mcp-servers/gemini-image/: README.md  mcp_server.py  pyproject.toml  run_mcp.py  template.env  test_integration.py  test_run_mcp_env.py
plugins/rpw-working/mcp-servers/google-docs-with-subtabs/: .env.example  README.md  gdocs_mvp.py  google_docs_with_subtabs.mcp.json  mcp_server.py  pyproject.toml  run_mcp.py  template.env  test_google_docs_mcp.py  test_run_mcp_env.py
plugins/rpw-working/mcp-servers/google-tasks/: .env.example  README.md  google_tasks.mcp.json  mcp_server.py  pyproject.toml  run_mcp.py  template.env  test_google_tasks.py  test_run_mcp_env.py
scripts/: bump_marketplace_versions.py  bump_version.py  enable_required_stack.py  public_release_gate.py  publish_public.py  utils.py
tests/: conftest.py  test_build_makefile_targets.py  test_bump_marketplace_versions.py  test_enable_required_stack.py  test_pretooluse_safety_hooks.py  test_public_release_gate.py  test_publish_public.py  test_repo_validations.py
(+117 files in other folders)
