[project]
name = "exa-mcp"
version = "0.1.0"
description = "MCP server for Exa web search and content retrieval"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "exa-py>=1.0.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
