[project]
name = "google-docs-with-subtabs"
version = "0.1.0"
description = "MCP server for Google Docs CRUD, tabs, find/replace, and safety controls"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
